linked the google clone

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div>
             <h2>Oops Sorry!<br>TroubleShooting</h2>
             <p>The page you are looking <br> for might be deleted or is <br> temporarily out of Service</p>
-            <button>Back To Home</button>
+            <button><a target="_blank" href="https://google-front-clone.vercel.app/">Back to Home</a></button>
         </div>
     </main>
     <footer>
